# i3ds-imu

./: .gitmodules  CMakeLists.txt  petamake.sh
include/: imu_dmu30.hpp  imu_helper.hpp
src/: i3ds_imu.cpp  imu_dmu30.cpp  imu_dmu30_debug.cpp  write_sample.c
